--- a/cycle_search.html
+++ b/cycle_search.html
@@ -15,11 +15,11 @@
       <option value="Years">Years</option>
     </select>
     <br />
-    Enter Start Date:<br />
-    <input name="startdate" type=""text" size="40"/>
+    Enter Start Date (MySQL format: YYYY-MM-DD):<br />
+    <input name="startdate" type=""text" size="10"/>
     <br />
-    Enter End Date:<br />
-    <input name="enddate" type=""text" size="40"/>
+    Enter End Date (MySQL format: YYYY-MM-DD):<br />
+    <input name="enddate" type=""text" size="10"/>
     <br />
     <input type="submit" name="submit" value="Search"/>
   </form>
