search and results in one php file instead of two files

--- a/cycle_search.html
+++ b/cycle_search.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Cycle rides search</title>
-  <link rel="stylesheet" href="cycle_search.css">
+  <link rel="stylesheet" href="cycle.css">
 </head>
 
 <body>
